# video_processor

./: .gitignore  CLAUDE.md  README.md  app.py  config.py  config.yaml  danmaku.py  danmaku_postprocess.py  encoder.py  main.py  models.py  pyproject.toml  recording_service.py  scheduler.py  service.sh  stream_monitor.py  uploader.py  video_processor.py
docs/plans/: 2026-02-23-module-restructure-design.md  2026-02-23-module-restructure-plan.md  2026-02-23-stream-status-monitor-design.md  2026-02-23-stream-status-monitor-plan.md  2026-02-24-bilibili-upload-idempotency-design.md  2026-02-24-bilibili-upload-idempotency-plan.md  2026-02-24-douyu-recording-design.md  2026-02-24-douyu-recording-implementation-plan.md
recording/: danmaku_collector.py  douyu_message_parser.py  douyu_stream_resolver.py  ffmpeg_recorder.py  recording_service.py  segment_pipeline.py  stt_codec.py  xml_writer.py
scripts/: upload-bandwidth-limit.sh
src/douyu2bilibili/: __init__.py  app.py  config.py  danmaku.py  danmaku_postprocess.py  encoder.py  logging_config.py  models.py  recording_service.py  scheduler.py  stream_monitor.py  uploader.py
tests/e2e/: README.md
tests/integration/: test_danmaku_collector_ws.py  test_danmaku_reconnect.py  test_douyu_stream_resolver_http_stub.py  test_ffmpeg_recorder_stub.py  test_segment_pipeline_offline.py
tests/unit/: test_cgroup_integration.py  test_danmaku_postprocess.py  test_danmaku_ssl_fallback.py  test_dmconvert_contract.py  test_douyu_message_parser.py  test_encoder_qsv_fallback.py  test_failure_quarantine.py  test_logging_config.py  (+8 more)
(+42 files in other folders)
