[project]
name = "douyu-to-bilibili-suite"
version = "0.1.0"
description = "One-stop automated Douyu-to-Bilibili recording, danmaku processing, encoding, and upload suite"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "bilitool>=0.1.3",
    "dmconvert>=0.0.4",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy>=2.0.31",
    "greenlet>=3.0.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.11.0",
    "aiohttp>=3.11.18",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
